--- a/SparkPlugins/Application/Resources/French.lproj/ApplicationPlugin.xib
+++ b/SparkPlugins/Application/Resources/French.lproj/ApplicationPlugin.xib
@@ -1,7 +1,9 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="4510" systemVersion="13A598" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none" promptedForUpgradeToXcode5="NO">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.Cocoa.XIB" version="3.0" toolsVersion="13196" targetRuntime="MacOSX.Cocoa" propertyAccessControl="none">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="4510"/>
+        <deployment identifier="macosx"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.CocoaPlugin" version="13196"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <customObject id="-2" userLabel="File's Owner" customClass="ApplicationPlugin">
@@ -15,7 +17,7 @@
             </connections>
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
-        <customObject id="-3" userLabel="Application"/>
+        <customObject id="-3" userLabel="Application" customClass="NSObject"/>
         <customView id="12" userLabel="View">
             <rect key="frame" x="0.0" y="0.0" width="296" height="235"/>
             <autoresizingMask key="autoresizingMask" flexibleMinX="YES" flexibleMaxX="YES" flexibleMinY="YES" flexibleMaxY="YES"/>
@@ -27,7 +29,7 @@
                         <tabViewItem identifier="Action" id="137" userLabel="ActionTab">
                             <view key="view" id="139">
                                 <rect key="frame" x="10" y="7" width="274" height="213"/>
-                                <autoresizingMask key="autoresizingMask"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <subviews>
                                     <textField verticalHuggingPriority="750" id="32">
                                         <rect key="frame" x="9" y="75" width="56" height="14"/>
@@ -94,12 +96,9 @@
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
-                                    <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="126">
+                                    <box verticalHuggingPriority="750" boxType="separator" id="126">
                                         <rect key="frame" x="0.0" y="163" width="274" height="5"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                        <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                                        <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <font key="titleFont" metaFont="system"/>
                                     </box>
                                     <textField verticalHuggingPriority="750" id="132">
                                         <rect key="frame" x="9" y="101" width="56" height="14"/>
@@ -110,12 +109,9 @@
                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                         </textFieldCell>
                                     </textField>
-                                    <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="134">
+                                    <box verticalHuggingPriority="750" boxType="separator" id="134">
                                         <rect key="frame" x="0.0" y="63" width="274" height="5"/>
                                         <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
-                                        <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                                        <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <font key="titleFont" metaFont="system"/>
                                     </box>
                                     <customView id="230">
                                         <rect key="frame" x="4" y="8" width="266" height="50"/>
@@ -187,12 +183,9 @@
                                         <rect key="frame" x="68" y="135" width="118" height="22"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMinY="YES"/>
                                     </customView>
-                                    <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="100249">
+                                    <box verticalHuggingPriority="750" boxType="separator" id="100249">
                                         <rect key="frame" x="0.0" y="124" width="274" height="5"/>
                                         <autoresizingMask key="autoresizingMask"/>
-                                        <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                                        <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                        <font key="titleFont" metaFont="system"/>
                                     </box>
                                 </subviews>
                             </view>
@@ -208,11 +201,11 @@
                                         <tabViewItems>
                                             <tabViewItem label="Démarrer" identifier="" id="185">
                                                 <view key="view" id="186">
-                                                    <rect key="frame" x="10" y="25" width="255" height="146"/>
+                                                    <rect key="frame" x="10" y="29" width="255" height="142"/>
                                                     <autoresizingMask key="autoresizingMask"/>
                                                     <subviews>
                                                         <matrix verticalHuggingPriority="750" mode="highlight" allowsEmptySelection="NO" autosizesCells="NO" id="187">
-                                                            <rect key="frame" x="9" y="38" width="236" height="84"/>
+                                                            <rect key="frame" x="9" y="34" width="236" height="84"/>
                                                             <autoresizingMask key="autoresizingMask" widthSizable="YES" flexibleMinY="YES"/>
                                                             <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
                                                             <size key="cellSize" width="236" height="19"/>
@@ -323,12 +316,9 @@
                                                                 <binding destination="-2" name="value" keyPath="sparkAction.reopen" id="226"/>
                                                             </connections>
                                                         </button>
-                                                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="100252">
+                                                        <box verticalHuggingPriority="750" boxType="separator" id="100252">
                                                             <rect key="frame" x="12" y="51" width="231" height="5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
-                                                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                                                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                            <font key="titleFont" metaFont="system"/>
                                                         </box>
                                                     </subviews>
                                                 </view>
@@ -364,12 +354,9 @@
                                                                 <binding destination="-2" name="selectedTag" keyPath="visual" id="222"/>
                                                             </connections>
                                                         </matrix>
-                                                        <box verticalHuggingPriority="750" title="Box" boxType="separator" titlePosition="noTitle" id="199">
+                                                        <box verticalHuggingPriority="750" boxType="separator" id="199">
                                                             <rect key="frame" x="8" y="93" width="235" height="5"/>
                                                             <autoresizingMask key="autoresizingMask"/>
-                                                            <color key="borderColor" white="0.0" alpha="0.41999999999999998" colorSpace="calibratedWhite"/>
-                                                            <color key="fillColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
-                                                            <font key="titleFont" metaFont="system"/>
                                                         </box>
                                                         <button id="194">
                                                             <rect key="frame" x="9" y="71" width="231" height="18"/>
