--- a/Spark/Sources/Main Window/Base.lproj/SELibraryWindow.xib
+++ b/Spark/Sources/Main Window/Base.lproj/SELibraryWindow.xib
@@ -22,7 +22,7 @@
         </customObject>
         <customObject id="-1" userLabel="First Responder" customClass="FirstResponder"/>
         <customObject id="-3" userLabel="Application" customClass="NSObject"/>
-        <window title="Spark" allowsToolTipsWhenApplicationIsInactive="NO" autorecalculatesKeyViewLoop="NO" deferred="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="documentWindow" frameAutosaveName="SparkMainWindow" titlebarAppearsTransparent="YES" titleVisibility="hidden" id="5" userLabel="Window">
+        <window title="Spark" allowsToolTipsWhenApplicationIsInactive="NO" deferred="NO" releasedWhenClosed="NO" visibleAtLaunch="NO" animationBehavior="documentWindow" frameAutosaveName="SparkMainWindow" titlebarAppearsTransparent="YES" titleVisibility="hidden" id="5" userLabel="Window">
             <windowStyleMask key="styleMask" titled="YES" closable="YES" miniaturizable="YES" resizable="YES" fullSizeContentView="YES"/>
             <windowCollectionBehavior key="collectionBehavior" fullScreenPrimary="YES"/>
             <windowPositionMask key="initialPositionMask" topStrut="YES" bottomStrut="YES"/>
